--- a/src/pages/blog-listing.css
+++ b/src/pages/blog-listing.css
@@ -1,8 +1,15 @@
 .blog-listing {
   display: block;
-  margin-top: 2em;
-  margin-bottom: 2em;
   text-decoration: none;
+  padding: 1em;
+  border-radius: 1em;
+  margin-top: 0;
+}
+
+.blog-listing:hover {
+  -webkit-box-shadow: 0px 5px 30px 3px rgba(226,222,255,0.5);
+  -moz-box-shadow: 0px 5px 30px 3px rgba(226,222,255,0.5);
+  box-shadow: 0px 5px 30px 3px rgba(226,222,255,0.5);
 }
 
 .blog-listing p {
